--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Welcome to namaste React</h1>
     <div id="root">
-        
+        <h1>Not Rendered</h1>
     </div>
     <script type="module" src="app.js"></script>
 </body>
